--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="app"></div>
     <script>
       window.$docsify = {
-        //...
+        loadSidebar: true,
       };
     </script>
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
